# jupyterlab-js-logs

./: .copier-answers.yml  .gitignore  .prettierignore  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml  deploy.yml
_temp_extension/: .gitignore  .prettierignore  LICENSE  README.md  install.json  package.json  pyproject.toml
_temp_extension/.github/workflows/: build.yml
_temp_extension/binder/: postBuild
_temp_extension/src/: index.ts
binder/: environment.yml  postBuild
jupyterlab_js_logs/: __init__.py  handlers.py  jupyterlab_js_logs.json
schema/: plugin.json
src/: index.ts  logEntryActions.ts  logLevelSwitcher.tsx  logger.ts
style/: base.css
